import java.time.LocalDate

plugins {
    id 'base'
    id "com.vanniktech.maven.publish" version "0.37.0" apply false
}

subprojects {
    apply plugin: 'java'

    group = rootProject.group
    version = rootProject.version

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
        modularity.inferModulePath = true
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Javadoc).configureEach {
        options.addBooleanOption('Xdoclint:none', true)
    }

    repositories {
        mavenCentral()
    }

    tasks.register('repomix', Exec) {
        group = 'build'
        description = 'Runs Repomix to bundle the src/main/java directory into the build folder.'

        dependsOn 'test'

        def isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
        def outputFile = layout.buildDirectory.file("repomix-output.xml").get().asFile.absolutePath

        if (isWindows) {
            executable = 'cmd'
            args = ['/c', 'npx', 'repomix', 'src/main/java', '--output', outputFile]
        } else {
            executable = 'npx'
            args = ['repomix', 'src/main/java', '--output', outputFile]
        }

        doFirst {
            layout.buildDirectory.get().asFile.mkdirs()
        }
    }

    pluginManager.withPlugin("com.vanniktech.maven.publish") {

        mavenPublishing {
            signAllPublications()

            pom {
                name = "scattering.core - ${project.name}"
                description = 'Software for the generation and analysis of synthetic fractal aggregates.'
                inceptionYear = '2020'
                url = 'https://github.com/light-scattering/scattering.core'

                organization {
                    name = 'Light Scattering'
                    url = 'https://github.com/light-scattering'
                }

                scm {
                    connection = 'scm:git:git://github.com/light-scattering/scattering.core.git'
                    developerConnection = 'scm:git:ssh://git@github.com/light-scattering/scattering.core.git'
                    url = 'https://github.com/light-scattering/scattering.core'
                }

                issueManagement {
                    system = 'GitHub Issues'
                    url = 'https://github.com/light-scattering/scattering.core/issues'
                }

                licenses {
                    license {
                        name = 'GNU Affero General Public License v3.0'
                        url = 'https://www.gnu.org/licenses/agpl-3.0.html'
                    }
                }

                developers {
                    developer {
                        id = 'krzysztofskorupski'
                        name = 'Krzysztof Skorupski'
                        url = 'https://orcid.org/0000-0002-4833-2819'
                        roles = ['Lead Developer']
                        timezone = 'Europe/Warsaw'
                    }
                }
            }
        }

        tasks.register('removeFromMavenLocal', Delete) {
            group = 'publishing'
            description = 'Removes the artifact from Maven Local'

            doFirst {
                if (!project.group || !project.name) {
                    throw new GradleException("Missing group or name. Cannot safely delete from Maven Local.")
                }
            }

            def groupPath = project.group.toString().replace('.', '/')
            def mavenLocalDir = new File(
                    System.getProperty('user.home'),
                    ".m2/repository/${groupPath}/${project.name}"
            )

            delete mavenLocalDir
        }
    }
}

// --- Release ---

tasks.register("checkVersionCitation") {
    group = "release"
    description = "Verifies that the version in CITATION.cff matches the project version."

    def citationFile = file("CITATION.cff")

    inputs.file(citationFile)
    inputs.property("projectVersion", project.version.toString())

    doLast {
        if (!citationFile.exists()) {
            throw new GradleException("CITATION.cff file not found at ${citationFile.absolutePath}")
        }

        def versionLine = citationFile.readLines().find { it.startsWith("version:") }
        if (!versionLine) {
            throw new GradleException("Could not find the 'version' field in CITATION.cff")
        }

        def citationVersion = versionLine.replace("version:", "").replace("\"", "").replace("'", "").trim()
        def currentVersion = project.version.toString()

        if (citationVersion != currentVersion) {
            throw new GradleException("Release blocked: Version mismatch!\n" +
                    "  -> CITATION.cff version : '${citationVersion}'\n" +
                    "  -> gradle.properties    : '${currentVersion}'")
        }
    }
}

tasks.register("checkVersionChangelog") {
    group = "release"
    description = "Verifies that the latest version in CHANGELOG.md matches the project version."

    def changelogFile = file("CHANGELOG.md")

    inputs.file(changelogFile)
    inputs.property("projectVersion", project.version.toString())

    doLast {
        if (!changelogFile.exists()) {
            throw new GradleException("CHANGELOG.md file not found at ${changelogFile.absolutePath}")
        }

        def versionLine = changelogFile.readLines().find { it.startsWith("## [") }
        if (!versionLine) {
            throw new GradleException("Could not find any release headings in ${changelogFile.name}")
        }

        def matcher = versionLine =~ /## \[([^]]+)]/
        if (!matcher.find()) {
            throw new GradleException("Malformed release heading in ${changelogFile.name}: '${versionLine}'")
        }

        def changelogVersion = matcher.group(1)
        def currentVersion = project.version.toString()

        if (changelogVersion != currentVersion) {
            throw new GradleException("Release blocked: Version mismatch!\n" +
                    "  -> CHANGELOG.md latest version : '${changelogVersion}'\n" +
                    "  -> gradle.properties           : '${currentVersion}'")
        }
    }
}

tasks.register('updateDataCitation') {
    group = 'release'
    description = 'Updates the date-released field in CITATION.cff to the current date.'

    dependsOn 'checkVersionCitation', 'checkVersionChangelog'

    def citationFile = file("CITATION.cff")

    doLast {
        if (!citationFile.exists()) {
            throw new GradleException("CITATION.cff file not found at ${citationFile.absolutePath}")
        }

        def currentDate = LocalDate.now().toString()

        def updatedContent = citationFile.text.replaceAll(
                /(?m)^date-released:.*$/,
                "date-released: ${currentDate}"
        )

        citationFile.text = updatedContent
    }
}

tasks.register("prepareCore") {
    group = 'release'
    description = 'Process the ROOT project.'

    dependsOn 'checkVersionChangelog', 'checkVersionCitation', 'updateDataCitation'
}

tasks.register("prepareLib") {
    group = 'release'
    description = 'Process the LIB project.'

    mustRunAfter 'clean'
    dependsOn ':eu.scattering.core.design:publishToMavenLocal', ':eu.scattering.core.lib:publishToMavenLocal'
}

tasks.register("prepareCli") {
    group = 'release'
    description = 'Process the CLI project'

    mustRunAfter 'prepareLib'
    dependsOn ':eu.scattering.cli:shadowJar', ':eu.scattering.cli:test', ':eu.scattering.cli:nodeVerify', ':eu.scattering.cli:pythonVerify'
}

tasks.register("testRepositoryJava", GradleBuild) {
    group = 'release'
    description = 'Test the local Java repository.'

    mustRunAfter 'prepareLib'
    dependsOn ':eu.scattering.core.lib:javaPackageTest'
}

tasks.register("verify") {
    group = 'release'
    description = 'Prepare the release'

    dependsOn 'clean', 'prepareCore', 'prepareLib', 'prepareCli', 'testRepositoryJava'
}

// --- Clean ---

tasks.register('cleanRemote', Exec) {
    group = 'build'
    description = 'Cleans the isolated consumer project.'

    workingDir = file('eu.scattering.core.lib/remote')

    def gradlew = System.getProperty("os.name").toLowerCase().contains("windows") ? "gradlew.bat" : "./gradlew"

    commandLine gradlew, 'clean'
}

tasks.named('clean', Delete) {
    delete layout.buildDirectory

    dependsOn 'cleanRemote'
}